--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "ispirett",
     "license": "MIT",
     "dependencies": {
-        "electron": "^5.0.4"
+        "electron": "^5.0.4",
+        "material-design-icons": "^3.0.1"
     }
 }
