--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "MIT",
     "dependencies": {
         "electron": "^5.0.4",
+        "electron-reload": "^1.5.0",
         "material-design-icons": "^3.0.1"
     }
 }
